--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 # Code-Generation
 javaPoetVersion=1.9.0
-
-guavaVersion=19.0
+guavaVersion=23.6-jre
 
 spockVersion=1.1-groovy-2.4
+gsonVersion=2.8.2
