GSON fills model

--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,10 @@ allprojects {
 
         excludes(["**/*.json", "**/*.java.txt"])
     }
+
+    dependencies {
+        compile "com.google.code.gson:gson:${gsonVersion}"
+    }
 }
 
 
@@ -49,7 +53,7 @@ dependencies {
 
     compile "com.squareup:javapoet:${javaPoetVersion}"
     compile "com.google.guava:guava:${guavaVersion}"
-    compile "com.google.code.gson:gson:${gsonVersion}"
+
 
     compile project(':json-model')
 }
