--- a/gradle/java.gradle
+++ b/gradle/java.gradle
@@ -5,3 +5,9 @@ repositories {
 }
 
 sourceCompatibility = 1.8
+
+compileJava {
+    options.encoding = 'UTF-8'
+    options.compilerArgs << "-Xlint:unchecked" << "-Xlint:deprecation"
+}
+
