--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,3 @@
-apply plugin: 'groovy'
-
 buildscript {
     repositories {
         jcenter()
@@ -17,7 +15,11 @@ buildscript {
 apply plugin: 'com.jfrog.bintray'
 apply plugin: 'maven-publish'
 
+apply from: "${rootDir}/gradle/groovy.gradle"
+
 version = '0.9.0'
+
+
 
 allprojects {
 
@@ -39,7 +41,9 @@ allprojects {
 
 
 dependencies {
-    compile localGroovy()
+
+    compile project(':json-model')
+
     compileOnly gradleApi()
     testCompile gradleTestKit()
 
@@ -50,9 +54,6 @@ dependencies {
     compile "com.squareup:javapoet:${javaPoetVersion}"
     compile "com.google.guava:guava:${guavaVersion}"
     compile "com.google.code.gson:gson:${gsonVersion}"
-
-
-    compile project(':json-model')
 }
 
 
