--- a/build.gradle
+++ b/build.gradle
@@ -12,16 +12,9 @@ buildscript {
 
 }
 
+subprojects {
 
-apply from: "${rootDir}/gradle/groovy.gradle"
-
-ext {
-    pomDescription = 'Gradle plugin to generate REST APIs for JAX-RS or Spring-Boot projects'
-}
-
-allprojects {
-
-    version = '1.0.2'
+    version = '1.0.3'
 
     apply from: "${rootDir}/gradle/java.gradle"
     apply from: "${rootDir}/gradle/bintray.gradle"
@@ -40,21 +33,4 @@ allprojects {
 
         excludes(["**/*.json", "**/*.java.txt"])
     }
-}
-
-
-dependencies {
-
-    compile project(':json-model')
-
-    compileOnly gradleApi()
-    testCompile gradleTestKit()
-
-    testCompile("org.spockframework:spock-core:${spockVersion}") {
-        exclude group: 'org.codehaus.groovy', module: 'groovy-all'
-    }
-
-    compile "com.squareup:javapoet:${javaPoetVersion}"
-    compile "com.google.guava:guava:${guavaVersion}"
-    compile "com.google.code.gson:gson:${gsonVersion}"
 }
