--- a/settings.gradle
+++ b/settings.gradle
@@ -1,5 +1,7 @@
-rootProject.name = 'gradle-java-rest-api'
+rootProject.name = 'Gradle REST Generator'
 
 include 'json-model'
 include 'rest-model'
 include 'rest-api-spring'
+include 'gradle-plugin'
+project(':gradle-plugin').name = 'gradle-java-rest-api'
