Store Gradle reports

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,6 +44,9 @@ jobs:
       - store_test_results:
           path: gradle-plugin/build/reports/tests/test
 
+      - store_artifacts:
+          path: gradle-plugin/build/reports/tests/test
+
       # save test results
       - run:
           name: Save test results
