--- a/demo-app-springboot/build.gradle
+++ b/demo-app-springboot/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     ext {
-        springBootVersion = '2.0.0.RC1'
+        springBootVersion = '2.0.3.RELEASE'
         restVersion = '1.0.16'
     }
     repositories {
@@ -17,7 +17,6 @@ buildscript {
 }
 
 apply plugin: 'java'
-apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 
