--- a/rest-api-spring/build.gradle
+++ b/rest-api-spring/build.gradle
@@ -1,6 +1,6 @@
 dependencies {
 
-    compile project(':rest-model')
+    implementation project(':rest-model')
 
     compileOnly "org.springframework:spring-webmvc:${springVersion}"
 }
