--- a/settings.gradle
+++ b/settings.gradle
@@ -2,6 +2,7 @@ rootProject.name = 'Gradle REST Generator'
 
 include 'json-model'
 include 'rest-model'
+include 'rest-api-micronaut'
 include 'rest-api-spring'
 include 'gradle-plugin'
 project(':gradle-plugin').name = 'gradle-java-rest-api'
