--- a/build.gradle
+++ b/build.gradle
@@ -9,12 +9,11 @@ buildscript {
         classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.1'
         classpath 'com.github.ben-manes:gradle-versions-plugin:0.20.0'
     }
-
 }
 
 subprojects {
 
-    version = '1.2.5'
+    version = '1.3.0-SNAPSHOT'
 
     apply from: "${rootDir}/gradle/java.gradle"
     apply from: "${rootDir}/gradle/bintray.gradle"
