--- a/demo-app-micronaut/build.gradle
+++ b/demo-app-micronaut/build.gradle
@@ -1,10 +1,11 @@
 buildscript {
     repositories {
+        mavenLocal()
         maven { url "https://repo.schaltzentrale.ch/artifactory/gesus/" }
     }
 
     dependencies {
-        classpath "ch.silviowangler.rest:gradle-java-rest-api:1.2.3"
+        classpath "ch.silviowangler.rest:gradle-java-rest-api:1.3.0-SNAPSHOT"
     }
 }
 
@@ -51,6 +52,8 @@ dependencies {
     testCompile "junit:junit:4.12"
     testCompile "io.micronaut:micronaut-inject-java"
     testCompile "org.hamcrest:hamcrest-all:1.3"
+
+    compile "ch.silviowangler.rest:rest-api-micronaut:1.3.0-SNAPSHOT"
 }
 
 shadowJar {
