--- a/demo-app-springboot/build.gradle
+++ b/demo-app-springboot/build.gradle
@@ -1,10 +1,11 @@
 buildscript {
     ext {
-        springBootVersion = '2.1.1.RELEASE'
-        restVersion = '1.0.36'
+        springBootVersion = '2.1.2.RELEASE'
+        restVersion = '1.3.0'
     }
     repositories {
 
+        mavenLocal()
         mavenCentral()
         maven { url "https://dl.bintray.com/saw303/gradle-plugins" }
         maven { url "https://repo.spring.io/snapshot" }
@@ -27,6 +28,7 @@ version = '0.0.1-SNAPSHOT'
 sourceCompatibility = 1.8
 
 repositories {
+    mavenLocal()
     mavenCentral()
     maven { url "https://dl.bintray.com/saw303/gradle-plugins" }
     maven { url "https://repo.spring.io/snapshot" }
@@ -42,7 +44,7 @@ dependencies {
 
 restApi {
     packageName = 'rest.demo.springboot'
-    springBoot = true
+    targetFramework = ch.silviowangler.gradle.restapi.TargetFramework.SPRING_BOOT
     optionsSource = file('src/main/specs')
 }
 
