--- a/gradle.properties
+++ b/gradle.properties
@@ -5,5 +5,6 @@ guavaVersion=25.1-jre
 spockVersion=1.2-groovy-2.5
 gsonVersion=2.8.5
 
-springVersion=5.1.3.RELEASE
+springVersion=5.1.5.RELEASE
+micronautVersion=1.0.4
 slf4jVersion=1.7.25
