--- a/rest-api-micronaut/build.gradle
+++ b/rest-api-micronaut/build.gradle
@@ -3,6 +3,7 @@ dependencies {
     implementation project(':rest-model')
 
     compileOnly "io.micronaut:micronaut-http:${micronautVersion}"
+    compileOnly "io.micronaut:micronaut-router:${micronautVersion}"
     compileOnly "io.reactivex.rxjava2:rxjava:2.2.2"
 }
 
