--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ buildscript {
 
 subprojects {
 
-    version = '1.3.0-SNAPSHOT'
+    version = '1.3.0'
 
     apply from: "${rootDir}/gradle/java.gradle"
     apply from: "${rootDir}/gradle/bintray.gradle"
