--- a/demo-app-micronaut/build.gradle
+++ b/demo-app-micronaut/build.gradle
@@ -5,7 +5,7 @@ buildscript {
     }
 
     dependencies {
-        classpath "ch.silviowangler.rest:gradle-java-rest-api:1.3.0-SNAPSHOT"
+        classpath "ch.silviowangler.rest:gradle-java-rest-api:1.3.0"
     }
 }
 
