--- a/gradle-plugin/build.gradle
+++ b/gradle-plugin/build.gradle
@@ -24,7 +24,17 @@ task checkVersion(type: Test) {
     File file = file("${projectDir}/src/main/groovy/ch/silviowangler/gradle/restapi/RestApiPlugin.groovy")
     String content = file.text
 
-    if (! content.contains("compile(\"ch.silviowangler.rest:rest-api-spring:${version}\")")) {
-        throw new RuntimeException("Wrong version in ${file.absolutePath}")
+    String msg = "Wrong version in ${file.absolutePath}"
+
+    if (! content.contains("final String pluginVersion = \"1.3.0\"")) {
+        throw new RuntimeException(msg)
+    }
+
+    if (! content.contains("implementation \"ch.silviowangler.rest:rest-api-spring:\${pluginVersion}\"")) {
+        throw new RuntimeException(msg)
+    }
+
+    if (! content.contains("implementation \"ch.silviowangler.rest:rest-api-micronaut:\${pluginVersion}\"")) {
+        throw new RuntimeException(msg)
     }
 }
