--- a/demo-app-micronaut/build.gradle
+++ b/demo-app-micronaut/build.gradle
@@ -5,7 +5,7 @@ buildscript {
     }
 
     dependencies {
-        classpath "ch.silviowangler.rest:gradle-java-rest-api:1.3.0"
+        classpath "ch.silviowangler.rest:gradle-java-rest-api:1.3.7"
     }
 }
 
@@ -53,7 +53,7 @@ dependencies {
     testCompile "io.micronaut:micronaut-inject-java"
     testCompile "org.hamcrest:hamcrest-all:1.3"
 
-    compile "ch.silviowangler.rest:rest-api-micronaut:1.3.0-SNAPSHOT"
+    compile "ch.silviowangler.rest:rest-api-micronaut:1.3.7"
 }
 
 shadowJar {
