--- a/rest-api-micronaut/build.gradle
+++ b/rest-api-micronaut/build.gradle
@@ -2,9 +2,14 @@ dependencies {
 
     api project(':rest-model')
 
+    annotationProcessor "io.micronaut:micronaut-inject-java:${micronautVersion}"
+    annotationProcessor "io.micronaut:micronaut-validation:${micronautVersion}"
+
     compileOnly "io.micronaut:micronaut-http:${micronautVersion}"
     compileOnly "io.micronaut:micronaut-router:${micronautVersion}"
     compileOnly "io.reactivex.rxjava2:rxjava:2.2.2"
+
+    testImplementation "io.micronaut:micronaut-core:${micronautVersion}"
 }
 
 ext {
