Initial version of Expanded Gets
Signed-off-by: Silvio Wangler <silvio.wangler@gmail.com>

--- a/demo-app-micronaut/src/main/resources/application.yml
+++ b/demo-app-micronaut/src/main/resources/application.yml
@@ -4,3 +4,10 @@ micronaut:
 
 jackson:
     dateFormat: yyyyMMdd
+
+
+restapi:
+    hateoas:
+        filter:
+            enabled: true
+            uri: /v1/**
