--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ buildscript {
 
 subprojects {
 
-    version = '1.5.1'
+    version = '2.0.0-SNAPSHOT'
 
     apply from: "${rootDir}/gradle/java.gradle"
     apply from: "${rootDir}/gradle/groovy.gradle"
