--- a/gradle/bintray.gradle
+++ b/gradle/bintray.gradle
@@ -41,11 +41,17 @@ task sourcesJar(type: Jar) {
     archiveClassifier = 'sources'
 }
 
+task javadocJar(type: Jar) {
+    from javadoc
+    archiveClassifier = 'javadoc'
+}
+
 publishing {
     publications {
         MyPublication(MavenPublication) {
             from components.java
             artifact sourcesJar
+            artifact javadocJar
             groupId 'ch.silviowangler.rest'
             artifactId project.name
             version project.version
@@ -64,5 +70,11 @@ publishing {
                 root.children().last() + pomConfig
             }
         }
+    }
+}
+
+javadoc {
+    if(JavaVersion.current().isJava9Compatible()) {
+        options.addBooleanOption('html5', true)
     }
 }
