Using the spec to get sub resource details
Signed-off-by: Silvio Wangler <silvio.wangler@gmail.com>

--- a/rest-api-spring/build.gradle
+++ b/rest-api-spring/build.gradle
@@ -1,6 +1,7 @@
 dependencies {
 
     api project(':rest-model')
+    implementation "org.slf4j:slf4j-api:${slf4jVersion}"
 
     compileOnly "org.springframework:spring-webmvc:${springVersion}"
 }
