--- a/gradle.properties
+++ b/gradle.properties
@@ -6,5 +6,5 @@ spockVersion=1.3-groovy-2.5
 gsonVersion=2.8.5
 
 springVersion=5.1.5.RELEASE
-micronautVersion=1.0.5
+micronautVersion=1.1.0.RC2
 slf4jVersion=1.7.25
