--- a/rest-model/build.gradle
+++ b/rest-model/build.gradle
@@ -3,6 +3,6 @@ ext {
 }
 
 dependencies {
-    compile "org.slf4j:slf4j-api:${slf4jVersion}"
-    compile "com.google.code.gson:gson:${gsonVersion}"
+    implementation "org.slf4j:slf4j-api:${slf4jVersion}"
+    implementation "com.google.code.gson:gson:${gsonVersion}"
 }
