Micronaut example with resources countries->cities->districts and expanded gets
Signed-off-by: Silvio Wangler <silvio.wangler@gmail.com>

--- a/demo-app-micronaut/build.gradle
+++ b/demo-app-micronaut/build.gradle
@@ -76,5 +76,5 @@ tasks.withType(JavaCompile){
 restApi {
     packageName = 'demo.app.micronaut'
     targetFramework = ch.silviowangler.gradle.restapi.TargetFramework.MICRONAUT
-    optionsSource = file("${rootDir}/../gradle-plugin/src/test/resources/specs/v1")
+    optionsSource = file("${projectDir}/src/main/spec/v1")
 }
