Feature/expanded gets (#36)
* Initial version of Expanded Gets

Signed-off-by: Silvio Wangler <silvio.wangler@gmail.com>

* Include sources in release

* Added javadoc to release

Signed-off-by: Silvio Wangler <silvio.wangler@gmail.com>

* Added documentation for HATEOAS support and expanded gets

Signed-off-by: Silvio Wangler <silvio.wangler@gmail.com>

* Using the spec to get sub resource details

Signed-off-by: Silvio Wangler <silvio.wangler@gmail.com>

* Fixed failing tests

Signed-off-by: Silvio Wangler <silvio.wangler@gmail.com>

* Use HttpAttributes instead of plain strings

Signed-off-by: Silvio Wangler <silvio.wangler@gmail.com>

* Micronaut example with resources countries->cities->districts and expanded gets

Signed-off-by: Silvio Wangler <silvio.wangler@gmail.com>

* formatting

* Upgrade to Gradle 5.3.1

* Renamed and EOL

--- a/demo-app-micronaut/build.gradle
+++ b/demo-app-micronaut/build.gradle
@@ -1,11 +1,16 @@
 buildscript {
+
+    ext {
+        restApiVersion = '2.0.0-SNAPSHOT'
+    }
+
     repositories {
         mavenLocal()
         maven { url "https://repo.schaltzentrale.ch/artifactory/gesus/" }
     }
 
     dependencies {
-        classpath "ch.silviowangler.rest:gradle-java-rest-api:1.4.2"
+        classpath "ch.silviowangler.rest:gradle-java-rest-api:${restApiVersion}"
     }
 }
 
@@ -34,7 +39,7 @@ repositories {
 
 dependencyManagement {
     imports {
-        mavenBom 'io.micronaut:micronaut-bom:1.0.4'
+        mavenBom 'io.micronaut:micronaut-bom:1.1.0.RC2'
     }
 }
 
@@ -53,7 +58,7 @@ dependencies {
     testCompile "io.micronaut:micronaut-inject-java"
     testCompile "org.hamcrest:hamcrest-all:1.3"
 
-    compile "ch.silviowangler.rest:rest-api-micronaut:1.3.7"
+    compile "ch.silviowangler.rest:rest-api-micronaut:${restApiVersion}"
 }
 
 shadowJar {
@@ -71,5 +76,5 @@ tasks.withType(JavaCompile){
 restApi {
     packageName = 'demo.app.micronaut'
     targetFramework = ch.silviowangler.gradle.restapi.TargetFramework.MICRONAUT
-    optionsSource = file("${rootDir}/../gradle-plugin/src/test/resources/specs/v1")
+    optionsSource = file("${projectDir}/src/main/spec/v1")
 }
