--- a/.editorconfig
+++ b/.editorconfig
@@ -1,13 +1,9 @@
 root = true
 
+[*]
+indent_style = space
+indent_size = 2
+continuation_indent_size = 4
 
 [*.{java,groovy}]
-indent_style = tab
-indent_size = 4
-continuation_indent_size = 8
 charset = utf-8
-
-[*.xml]
-indent_style = tab
-indent_size = 4
-continuation_indent_size = 8
