--- a/json-model/build.gradle
+++ b/json-model/build.gradle
@@ -1,7 +1,3 @@
-ext {
-  pomDescription = 'Java model for Gradle plugin'
-}
+ext { pomDescription = 'Java model for Gradle plugin' }
 
-dependencies {
-  api 'javax.activation:activation:1.1.1'
-}
+dependencies { api 'javax.activation:activation:1.1.1' }
