--- a/rest-api-micronaut/build.gradle
+++ b/rest-api-micronaut/build.gradle
@@ -1,21 +1,18 @@
 dependencies {
 
-    api project(':rest-model')
-    implementation project(':json-model') 
+	api project(':rest-model')
+	implementation project(':json-model')
 
-    annotationProcessor "io.micronaut:micronaut-inject-java:${micronautVersion}"
-    annotationProcessor "io.micronaut:micronaut-validation:${micronautVersion}"
+	annotationProcessor "io.micronaut:micronaut-inject-java:${micronautVersion}"
+	annotationProcessor "io.micronaut:micronaut-validation:${micronautVersion}"
 
-    compileOnly "io.micronaut:micronaut-http:${micronautVersion}"
-    compileOnly "io.micronaut:micronaut-router:${micronautVersion}"
-    compileOnly "io.reactivex.rxjava2:rxjava:2.2.2"
-    compileOnly "com.fasterxml.jackson.core:jackson-databind:2.9.8"
+	compileOnly "io.micronaut:micronaut-http:${micronautVersion}"
+	compileOnly "io.micronaut:micronaut-router:${micronautVersion}"
+	compileOnly "io.reactivex.rxjava2:rxjava:2.2.2"
+	compileOnly "com.fasterxml.jackson.core:jackson-databind:2.9.8"
 
-    testImplementation "io.micronaut:micronaut-core:${micronautVersion}"
-    testImplementation "io.micronaut:micronaut-router:${micronautVersion}"
-    
+	testImplementation "io.micronaut:micronaut-core:${micronautVersion}"
+	testImplementation "io.micronaut:micronaut-router:${micronautVersion}"
 }
 
-ext {
-    pomDescription = 'Add ons for the Micronaut framework'
-}
+ext { pomDescription = 'Add ons for the Micronaut framework' }
