--- a/rest-api-spring/build.gradle
+++ b/rest-api-spring/build.gradle
@@ -1,11 +1,9 @@
 dependencies {
 
-    api project(':rest-model')
-    implementation "org.slf4j:slf4j-api:${slf4jVersion}"
+	api project(':rest-model')
+	implementation "org.slf4j:slf4j-api:${slf4jVersion}"
 
-    compileOnly "org.springframework:spring-webmvc:${springVersion}"
+	compileOnly "org.springframework:spring-webmvc:${springVersion}"
 }
 
-ext {
-    pomDescription = 'Add ons for the Spring platform'
-}
+ext { pomDescription = 'Add ons for the Spring platform' }
