more tests and PR feedback

--- a/gradle-plugin/src/main/resources/puml/resources-overview.puml.template
+++ b/gradle-plugin/src/main/resources/puml/resources-overview.puml.template
@@ -8,6 +8,8 @@ skinparam class {
 }
 
 <%for(container in containers) { String name = container.resourceContract.general.name  %>class "${name}" as ${container.resourceContract.general.hashCode().abs()} << (R,#DADADA) >> {
+<%if (showFields) { for(field in container.resourceContract.fields) { %>${field.type} ${field.name}
+<%}}%>
 }
 <%}%>
 <%for(dep in dependencies){%>${dep.parent}  o--  ${dep.child}
