--- a/rest-api-micronaut/build.gradle
+++ b/rest-api-micronaut/build.gradle
@@ -6,6 +6,7 @@ dependencies {
 	annotationProcessor "io.micronaut:micronaut-inject-java:${micronautVersion}"
 	annotationProcessor "io.micronaut:micronaut-validation:${micronautVersion}"
 
+	compileOnly "io.micronaut:micronaut-runtime:${micronautVersion}"
 	compileOnly "io.micronaut:micronaut-http:${micronautVersion}"
 	compileOnly "io.micronaut:micronaut-router:${micronautVersion}"
 	compileOnly "io.reactivex.rxjava2:rxjava:2.2.2"
