Upgraded to Micronaut 1.1.1

--- a/demo-app-micronaut/settings.gradle
+++ b/demo-app-micronaut/settings.gradle
@@ -3,5 +3,6 @@ includeBuild("..") {
         substitute module('ch.silviowangler.rest:gradle-java-rest-api') with project(':gradle-java-rest-api')
         substitute module('ch.silviowangler.rest:rest-api-micronaut') with project(':rest-api-micronaut')
         substitute module('ch.silviowangler.rest:json-model') with project(':json-model')
+        substitute module('ch.silviowangler.rest:rest-model') with project(':rest-model')
     }
 }
