--- a/demo-app-micronaut/build.gradle
+++ b/demo-app-micronaut/build.gradle
@@ -39,26 +39,26 @@ repositories {
 
 dependencyManagement {
     imports {
-        mavenBom 'io.micronaut:micronaut-bom:1.1.0'
+        mavenBom 'io.micronaut:micronaut-bom:1.1.1'
     }
 }
 
 dependencies {
     annotationProcessor "io.micronaut:micronaut-inject-java"
     annotationProcessor "io.micronaut:micronaut-validation"
-    compile "io.micronaut:micronaut-inject"
-    compile "io.micronaut:micronaut-validation"
-    compile "io.micronaut:micronaut-runtime"
-    compile "io.micronaut:micronaut-http-client"
-    compile "javax.annotation:javax.annotation-api"
-    compile "io.micronaut:micronaut-http-server-netty"
+    implementation "io.micronaut:micronaut-inject"
+    implementation "io.micronaut:micronaut-validation"
+    implementation "io.micronaut:micronaut-runtime"
+    implementation "io.micronaut:micronaut-http-client"
+    implementation "javax.annotation:javax.annotation-api"
+    implementation "io.micronaut:micronaut-http-server-netty"
     compileOnly "io.micronaut:micronaut-inject-java"
-    runtime "ch.qos.logback:logback-classic:1.2.3"
-    testCompile "junit:junit:4.12"
-    testCompile "io.micronaut:micronaut-inject-java"
-    testCompile "org.hamcrest:hamcrest-all:1.3"
+    implementation "ch.qos.logback:logback-classic:1.2.3"
+    testImplementation "junit:junit:4.12"
+    testImplementation "io.micronaut:micronaut-inject-java"
+    testImplementation "org.hamcrest:hamcrest-all:1.3"
 
-    compile "ch.silviowangler.rest:rest-api-micronaut:${restApiVersion}"
+    implementation "ch.silviowangler.rest:rest-api-micronaut:${restApiVersion}"
 }
 
 shadowJar {
