--- a/demo-app-micronaut/build.gradle
+++ b/demo-app-micronaut/build.gradle
@@ -48,6 +48,7 @@ dependencies {
     annotationProcessor "io.micronaut:micronaut-validation"
     implementation "io.micronaut:micronaut-inject"
     implementation "io.micronaut:micronaut-validation"
+    implementation "io.micronaut.configuration:micronaut-hibernate-validator"
     implementation "io.micronaut:micronaut-runtime"
     implementation "io.micronaut:micronaut-http-client"
     implementation "javax.annotation:javax.annotation-api"
