--- a/json-model/build.gradle
+++ b/json-model/build.gradle
@@ -1,3 +1,6 @@
 ext { pomDescription = 'Java model for Gradle plugin' }
 
-dependencies { api 'javax.activation:activation:1.1.1' }
+dependencies {
+	api 'javax.activation:activation:1.1.1'
+	implementation "com.google.guava:guava:${guavaVersion}"
+}
