--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,7 @@ jobs:
       - run: ./gradlew dependencies
 
       # run tests!
-      - run: ./gradlew check
+      - run: ./gradlew --parallel check
 
       # run micronaut
       - run: demo-app-micronaut/gradlew check
