--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,19 @@ buildscript {
     jcenter()
     maven { url "https://repo.grails.org/grails/core" }
   }
+  
+  ext {
+    libPhoneNumberVersion = '8.10.13'
+    javaPoetVersion='1.11.1'
+    guavaVersion='27.1-jre'
+
+    spockVersion='1.3-groovy-2.5'
+    gsonVersion='2.8.5'
+
+    springVersion='5.1.7.RELEASE'
+    micronautVersion='1.1.2'
+    slf4jVersion='1.7.25'
+  }
 
   dependencies {
     classpath "gradle.plugin.nl.javadude.gradle.plugins:license-gradle-plugin:0.14.0"
