--- a/demo-app-springboot/gradle/wrapper/gradle-wrapper.properties
+++ b/demo-app-springboot/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Wed Aug 23 14:03:57 CEST 2017
+#Fri Jul 28 13:37:07 BST 2017
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
