--- a/gradle-plugin/build.gradle
+++ b/gradle-plugin/build.gradle
@@ -11,6 +11,8 @@ dependencies {
 	implementation "com.squareup:javapoet:${javaPoetVersion}"
 	implementation "com.google.guava:guava:${guavaVersion}"
 	implementation "com.google.code.gson:gson:${gsonVersion}"
+
+	implementation 'net.sourceforge.plantuml:plantuml:8059'
 }
 
 task checkVersion(type: Test) {
