Moved pagination to a separate module
Signed-off-by: Silvio Wangler <71073+saw303@users.noreply.github.com>

--- a/rest-model/build.gradle
+++ b/rest-model/build.gradle
@@ -5,4 +5,5 @@ dependencies {
 	implementation "com.google.code.gson:gson:${gsonVersion}"
 	implementation "com.googlecode.libphonenumber:libphonenumber:${libPhoneNumberVersion}"
 	api "javax.validation:validation-api:2.0.1.Final"
+	api project(":common-pagination")
 }
