--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,7 @@
 rootProject.name = 'Gradle REST Generator'
 
 include 'json-model'
+include 'common-pagination'
 include 'rest-model'
 include 'rest-api-micronaut'
 include 'rest-api-spring'
