--- a/rest-api-micronaut/build.gradle
+++ b/rest-api-micronaut/build.gradle
@@ -17,6 +17,7 @@ dependencies {
 
 	testImplementation "io.micronaut:micronaut-core:${micronautVersion}"
 	testImplementation "io.micronaut:micronaut-router:${micronautVersion}"
+	testImplementation "io.reactivex.rxjava2:rxjava:2.2.12"
 
 	implementation "com.google.guava:guava:${guavaVersion}"
 }
