--- a/gradle-plugin/build.gradle
+++ b/gradle-plugin/build.gradle
@@ -1,3 +1,18 @@
+plugins {
+	id 'java-gradle-plugin'
+}
+
+gradlePlugin {
+	plugins {
+		restapi {
+			id = 'ch.silviowangler.restapi'
+			implementationClass = 'ch.silviowangler.gradle.restapi.RestApiPlugin'
+		}
+	}
+}
+
+group = 'ch.silviowangler.rest'
+
 ext { pomDescription = 'Gradle plugin to generate REST APIs for JAX-RS or Spring-Boot projects' }
 
 dependencies {
