--- a/gradle-plugin/src/main/resources/asciidoc_templates/container_details.asciidoc.template
+++ b/gradle-plugin/src/main/resources/asciidoc_templates/container_details.asciidoc.template
@@ -89,7 +89,7 @@ Headers::
 |${header.name}
 |${header.type}
 |${header.mandatory}
-|${header.comment}
+|${header.xComment}
     <%}%>
 |===
   <%}%>
