--- a/gradle.properties
+++ b/gradle.properties
@@ -3,4 +3,6 @@
 
 # Enable build cache by default
 org.gradle.caching=true
+# Enable filesystem watching
+org.gradle.vfs.watch=true
 # --------------------------------
