Upgraded to Gradle 6.8.3 and centralized repositories config
Signed-off-by: Silvio Wangler <71073+saw303@users.noreply.github.com>

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,15 @@
+pluginManagement {
+  repositories {
+    gradlePluginPortal()
+  }
+}
+
+dependencyResolutionManagement {
+  repositories {
+    mavenCentral()
+  }
+}
+
 rootProject.name = 'Gradle REST Generator'
 
 include 'json-model'
