--- a/build.gradle
+++ b/build.gradle
@@ -1,28 +1,8 @@
-buildscript {
-  repositories {
-    jcenter()
-    maven { url "https://repo.grails.org/grails/core" }
-  }
-
-  ext {
-    libPhoneNumberVersion = '8.11.5'
-    javaPoetVersion='1.12.1'
-    guavaVersion='28.1-jre'
-
-    spockVersion='1.3-groovy-2.5'
-    gsonVersion='2.8.6'
-
-    springVersion='5.2.4.RELEASE'
-    micronautVersion='1.3.4'
-    slf4jVersion='1.7.29'
-  }
-
-  dependencies {
-    classpath "gradle.plugin.nl.javadude.gradle.plugins:license-gradle-plugin:0.14.0"
-    classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.4'
-    classpath 'com.github.ben-manes:gradle-versions-plugin:0.25.0'
-    classpath 'com.diffplug.spotless:spotless-plugin-gradle:3.27.2'
-  }
+plugins {
+  id "com.github.hierynomus.license" version "0.14.0" apply false
+  id "com.jfrog.bintray" version "1.8.4" apply false
+  id "com.github.ben-manes.versions" version "0.36.0" apply false
+  id "com.diffplug.gradle.spotless" version "5.10.2" apply false
 }
 
 subprojects {
