--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,14 @@
+libPhoneNumberVersion=8.11.5
+javaPoetVersion=1.13.0
+guavaVersion=28.1-jre
+spockVersion=1.3-groovy-2.5
+gsonVersion=2.8.6
+springVersion=5.2.4.RELEASE
+micronautVersion=1.3.4
+slf4jVersion=1.7.29
+
 # Gradle settings for this project
 # --------------------------------
-
 # Enable build cache by default
 org.gradle.caching=true
 # Enable filesystem watching
