--- a/gradle/java.gradle
+++ b/gradle/java.gradle
@@ -1,5 +1,5 @@
 apply plugin: 'java-library'
-apply plugin: "com.diffplug.gradle.spotless"
+apply plugin: 'com.diffplug.spotless'
 
 spotless {
   java {
@@ -22,10 +22,6 @@ spotless {
     greclipse()
     endWithNewline()
   }
-}
-
-repositories {
-    jcenter()
 }
 
 sourceCompatibility = 1.8
