Make plugin compatible with Gradle 7
Signed-off-by: Silvio Wangler <71073+saw303@users.noreply.github.com>

--- a/gradle/groovy.gradle
+++ b/gradle/groovy.gradle
@@ -3,5 +3,5 @@ apply plugin: 'groovy'
 compileGroovy.options.compilerArgs << '-Xlint:unchecked'
 
 dependencies {
-    compile localGroovy()
+    implementation localGroovy()
 }
