--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ subprojects {
   apply plugin: 'com.github.ben-manes.versions'
 
   dependencies {
-    testImplementation platform("org.spockframework:spock-bom:2.0-M4-groovy-3.0")
+    testImplementation platform("org.spockframework:spock-bom:${spockVersion}")
     testImplementation "org.spockframework:spock-core"
   }
 
