--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 libPhoneNumberVersion=8.12.2
 javaPoetVersion=1.13.0
 guavaVersion=28.1-jre
-spockVersion=1.3-groovy-2.5
+spockVersion=2.0-M4-groovy-3.0
 gsonVersion=2.8.6
 springVersion=5.2.4.RELEASE
 micronautVersion=1.3.4
