Ability to create a Micronaut http client (very alpha state)
Signed-off-by: Silvio Wangler <71073+saw303@users.noreply.github.com>

--- a/gradle/java.gradle
+++ b/gradle/java.gradle
@@ -24,7 +24,11 @@ spotless {
   }
 }
 
-sourceCompatibility = 1.8
+java {
+  toolchain {
+    languageVersion = JavaLanguageVersion.of(8)
+  }
+}
 
 compileJava {
     options.encoding = 'UTF-8'
