--- a/gradle/java.gradle
+++ b/gradle/java.gradle
@@ -28,6 +28,8 @@ java {
   toolchain {
     languageVersion = JavaLanguageVersion.of(8)
   }
+  withJavadocJar()
+  withSourcesJar()
 }
 
 compileJava {
