--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,21 @@
 plugins {
   id "com.github.hierynomus.license" version "0.14.0" apply false
-  id "com.jfrog.bintray" version "1.8.4" apply false
   id "com.github.ben-manes.versions" version "0.36.0" apply false
   id "com.diffplug.gradle.spotless" version "5.10.2" apply false
 }
 
-subprojects {
+subprojects { subproject ->
 
   version = "2.3.2"
 
+  println subproject
+
   apply from: "${rootDir}/gradle/java.gradle"
   apply from: "${rootDir}/gradle/groovy.gradle"
-  apply from: "${rootDir}/gradle/bintray.gradle"
+
+  if (subproject.name != 'gradle-java-rest-api') {
+    apply from: "${rootDir}/gradle/bintray.gradle"
+  }
 
   apply plugin: 'com.github.ben-manes.versions'
 
