--- a/gradle-plugin/build.gradle
+++ b/gradle-plugin/build.gradle
@@ -1,5 +1,6 @@
 plugins {
 	id 'java-gradle-plugin'
+  id 'maven-publish'
 }
 
 gradlePlugin {
@@ -9,6 +10,27 @@ gradlePlugin {
 			implementationClass = 'ch.silviowangler.gradle.restapi.RestApiPlugin'
 		}
 	}
+}
+
+publishing {
+  repositories {
+    maven {
+      name = "GitHubPackages"
+      url = uri("https://maven.pkg.github.com/saw303/gradle-java-rest-api")
+      credentials {
+        username = project.findProperty("gpr.user") ?: System.getenv("USERNAME")
+        password = project.findProperty("gpr.key") ?: System.getenv("TOKEN")
+      }
+    }
+    maven {
+      name = "Onstructive"
+      url = uri(project.findProperty("artifactory_url"))
+      credentials {
+        username = project.findProperty("artifactory_user") ?: System.getenv("A_USERNAME")
+        password = project.findProperty("artifactory_password") ?: System.getenv("A_TOKEN")
+      }
+    }
+  }
 }
 
 group = 'ch.silviowangler.rest'
